tests/NormalTests/paczka1/small_fuzzy/43465595.err
Error in line 6: JyaV1cP S202 8,6
Error in line 9: 0SXeJoIB A610 73,4
